# aether

./: .gitignore  Cargo.toml  LICENSE  Makefile  rust-toolchain.toml  rustfmt.toml
configs/examples/: minimal.yaml
crates/aether-config/: Cargo.toml
crates/aether-config/src/: lib.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: error.rs  lib.rs  types.rs
crates/aether-discovery/: Cargo.toml
crates/aether-discovery/src/: lib.rs
crates/aether-runtime/: Cargo.toml
crates/aether-runtime/src/: lib.rs
tools/aether-cli/: Cargo.toml
tools/aether-cli/src/: main.rs
