[workspace]
members = [
    "crates/aether-core",
    "crates/aether-runtime",
    "crates/aether-config",
    "crates/aether-discovery",
    "tools/aether-cli",
]
resolver = "2"

[workspace.package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Alex Efanov <sanyaefan@icloud.com>"]
license = "MIT"

# ===== Асинхронность и системные примитивы =====
[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
bytes = "1.6"
futures = "0.3"

# ===== Сериализация =====
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.8"

# ===== Обработка ошибок =====
thiserror = "1.0"
anyhow = "1.0"

# ===== Конкурентность =====
dashmap = "5.5"
arc-swap = "1.6"

# ===== Сетевые примитивы =====
socket2 = "0.5"
ipnet = "2.9"

# ===== Логирование =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ===== Валидация конфигурации =====
jsonschema = "0.18"
validator = { version = "0.16", features = ["derive"] }

# ===== HTTP стек =====
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.3", features = ["full"] }
hyper-util = "0.1"

# ===== Обнаружение сервисов =====
bollard = "0.17"
kube = "0.93"
k8s-openapi = "0.21"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ===== CLI =====
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
toml = "0.8"

# ===== Тестирование =====
criterion = "0.5"
insta = "1.38"