# crates/aether-core/Cargo.toml
[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
socket2.workspace = true
ipnet.workspace = true