[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../../crates/aether-core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
